Allowed for display/update of custom module fields

--- a/src/main/webapp/private/css/role_manager.css
+++ b/src/main/webapp/private/css/role_manager.css
@@ -62,3 +62,15 @@ table#moduleTable input.resetButton, table#moduleTable input.applyButton {
 table#moduleTable td {
 	text-align:center
 }
+
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+table.adminListTable input::-webkit-outer-spin-button, table.adminListTable input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.dirtyField {
+	background-color:#ffff80;	
+}
